--- a/export/resources/css/theme.css
+++ b/export/resources/css/theme.css
@@ -18,17 +18,17 @@
 	--spacing-2xl: clamp(4.5rem, 3.93rem + 2.76vw, 6rem);
 	--spacing-3xl: clamp(6.75rem, 5.90rem + 4.14vw, 9rem);
 	--spacing-4xl: clamp(9rem, 7.86rem + 5.52vw, 12rem);
-	--spacing-3xs---2xs: clamp(0.3125rem, 0.15rem + 0.80vw, 0.75rem);
-	--spacing-2xs---xs: clamp(0.5625rem, 0.35rem + 1.03vw, 1.125rem);
-	--spacing-xs---s: clamp(0.875rem, 0.64rem + 1.15vw, 1.5rem);
-	--spacing-s---m: clamp(1.125rem, 0.70rem + 2.07vw, 2.25rem);
-	--spacing-m---l: clamp(1.6875rem, 1.19rem + 2.41vw, 3rem);
-	--spacing-l---xl: clamp(2.25rem, 1.40rem + 4.14vw, 4.5rem);
-	--spacing-xl---2xl: clamp(3.375rem, 2.38rem + 4.83vw, 6rem);
-	--spacing-2xl---3xl: clamp(4.5rem, 2.79rem + 8.28vw, 9rem);
-	--spacing-3xl---4xl: clamp(6.75rem, 4.76rem + 9.66vw, 12rem);
-	--spacing-s---l: clamp(1.125rem, 0.41rem + 3.45vw, 3rem);
-	--spacing-s---xl: clamp(1.125rem, -0.16rem + 6.21vw, 4.5rem);
+	--spacing-3xs-2xs: clamp(0.3125rem, 0.15rem + 0.80vw, 0.75rem);
+	--spacing-2xs-xs: clamp(0.5625rem, 0.35rem + 1.03vw, 1.125rem);
+	--spacing-xs-s: clamp(0.875rem, 0.64rem + 1.15vw, 1.5rem);
+	--spacing-s-m: clamp(1.125rem, 0.70rem + 2.07vw, 2.25rem);
+	--spacing-m-l: clamp(1.6875rem, 1.19rem + 2.41vw, 3rem);
+	--spacing-l-xl: clamp(2.25rem, 1.40rem + 4.14vw, 4.5rem);
+	--spacing-xl-2xl: clamp(3.375rem, 2.38rem + 4.83vw, 6rem);
+	--spacing-2xl-3xl: clamp(4.5rem, 2.79rem + 8.28vw, 9rem);
+	--spacing-3xl-4xl: clamp(6.75rem, 4.76rem + 9.66vw, 12rem);
+	--spacing-s-l: clamp(1.125rem, 0.41rem + 3.45vw, 3rem);
+	--spacing-s-xl: clamp(1.125rem, -0.16rem + 6.21vw, 4.5rem);
 	--spacing-0: 0;
 	--spacing-auto: auto;
 	--spacing-full: 100%;
